@startuml
'https://SubscriptionServicetuml.com/class-diagram

hide circle

title US06 Class Diagram


class AuthorController #3B5323FF/B0C4DEFF {
}

class AuthorService #3B5323FF/B0C4DEFF{
+getAuthorByName():void
}

interface AuthorRepository <<interface>> #3B5323FF/B0C4DEFF{
+getAuthorByName(): list
}


class Author #3B5323FF/B0C4DEFF{
-name
-short_bio
-author_number
}

class Book #3B5323FF/B0C4DEFF  {
+isbn
+title
+description
+author
}

Author "1" -->"0..*" Book: belongs to
AuthorController..> AuthorService:uses
AuthorService ..>  AuthorRepository:uses
AuthorRepository "1" -->"0..*" Author: Records
@enduml
